@@ -11,6 +11,8 @@
 	* client/common/client.c, client/gtk/guimap.c: Fix for crash when
 	reconnecting during RoadBuilding card that was played before a dice
 	roll.
+	* client/common/develop.c(develop_bought_turn): Development cards can
+	be played when reconnected.
 
 2004-11-21  0.8.1.43  Roland Clobus <rclobus@bigfoot.com>
 	* client/gtk/offline.c(frontend_offline): Game|Connect incorrectly
